--- a/docs/tutorials/transformer.ipynb
+++ b/docs/tutorials/transformer.ipynb
@@ -2538,6 +2538,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(type(transformer))\n"
+      ],
+      "metadata": {
+        "id": "xySIV848fkI1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_jTvJsXquaHW"
@@ -3366,12 +3377,15 @@
   "metadata": {
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "machine_shape": "hm",
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
